--- a/hrms/Properties/Resources.resx
+++ b/hrms/Properties/Resources.resx
@@ -142,12 +142,11 @@
   <data name="stop321" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\icon\exit\stop32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  
   <data name="userminus32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\icon\addstaff\userminus32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="spanner32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\res\icon\addstaff\spanner32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ic_sort_black_24dp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\res\icon\addstaff\ic_sort_black_24dp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="pencil32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\icon\addstaff\pencil32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -155,7 +154,10 @@
   <data name="note32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\icon\gonggao\note32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ic_sort_black_24dp" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\res\icon\addstaff\ic_sort_black_24dp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="spanner32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\res\icon\addstaff\spanner32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="110652133878c2cca3l" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\res\icon\about\110652133878c2cca3l.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
